--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,8 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "build": {
+    "appId": "com.astra.app",
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ]
+  },
   "scripts": {
     "dev": "vite",
+    "build-electron": "tsc -p electron/tsconfig.json",
+    "electron": "npm run build-electron && electron ./dist-electron/main.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -19,6 +28,8 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "electron": "^37.1.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
