--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,12 +7,11 @@
   "type": "ESNext",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ts-node data-source.ts"
   },
   "dependencies": {
     "dotenv": "^16.6.1",
     "pg": "^8.16.3",
-    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.25"
   }
 }
