--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -34,6 +34,24 @@ services:
       - app-network
     environment:
       - NODE_ENV=development
+  api:
+    build:
+      context: ../
+      dockerfile: ./containers/Dockerfile.api
+    container_name: express-api
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - "3443:3443"
+    volumes:
+      - ../packages/api:/usr/src/app
+      - /usr/src/app/node_modules
+      - ../packages/api/certs:/usr/src/app/certs
+    environment:
+      - NODE_ENV=development
+    networks:
+      - app-network
   pgadmin:
     image: dpage/pgadmin4
     environment:
