--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,7 +15,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.1",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.2"
   },
