Added Shared Types package
This patch adds a shared types package to separate
backend types (DB Entity defs) from the front-end.
These shared types should be used throughout the
entire project whenever possible, and TypeORM defs only
used in the context of interacting directly with the DB.

--- a/packages/controllers/tsconfig.json
+++ b/packages/controllers/tsconfig.json
@@ -9,5 +9,5 @@
     "esModuleInterop": true,
     "composite": true
   },
-  "include": ["controllers", "index.ts"]
+  "include": ["services", "index.ts"]
 }
