Fixed inter-package dependencies
Previously the shared types package was not successfully being
exported and made available to other packages in this monorepo.
This has been patched and patterns made consistent across the
codebase with paths and module resolution.
- Also added a stop script for the docker containers
- Changed the UI and the API to run on ports 3000 & 3001
  respectively, as would be typical of most projects

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "setup": "bash bin/setup.sh",
     "dev": "bash bin/dev.sh",
+    "stop": "bash bin/stop.sh",
     "reset-db": "bash bin/reset-db.sh",
     "clean": "bash bin/clean.sh"
   },
