--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "nodemon"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
