--- a/packages/controllers/tsconfig.json
+++ b/packages/controllers/tsconfig.json
@@ -9,5 +9,6 @@
     "esModuleInterop": true,
     "composite": true
   },
+  "extends": "../../tsconfig.json",
   "include": ["services", "index.ts"]
 }
