--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -12,7 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@astra/db": "*",
+    "@astra/shared": "*",
     "@types/node": "^24.0.14",
-    "@astra/shared": "*"
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
