--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,7 +8,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "ts-node data-source.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "watch": "tsc -w"
   },
   "dependencies": {
     "dotenv": "^16.6.1",
