Add transformers module to the controllers package
This patch adds transformers that will convert DB entity
types into universal shared types used throughout the rest of the
application. DB entity types should only be used in the context of DB
interaction, and never on the front end.

--- a/packages/controllers/tsconfig.json
+++ b/packages/controllers/tsconfig.json
@@ -10,5 +10,5 @@
     "composite": true
   },
   "extends": "../../tsconfig.json",
-  "include": ["services", "index.ts"]
+  "include": ["services", "transformers", "index.ts"]
 }
