:hanmmer: WIP: Login/Registration API
- New API changes for login/registration
- Changes to dockerfiles/dev setup for convenience
- Added VSCODE configs

--- a/containers/Dockerfile.api
+++ b/containers/Dockerfile.api
@@ -12,7 +12,7 @@ RUN npm install
 WORKDIR /app/packages/api
 
 # Expose the API port
-EXPOSE 3001
+EXPOSE 3001 9229
 
 # Start the dev server
 CMD ["npm", "run", "dev"]
