--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -9,8 +9,9 @@
     "target": "ESNext",
     "moduleResolution": "nodenext",
     "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "extends": "../../tsconfig.json",
   "include": ["types", "index.ts"]
