:sparkles: New Login/Registration API
- New API addition for login/registration
- Changes to dockerfiles/dev setup for convenience
- Added VSCODE configs
- TODOS: Automatic rebuilding/watching of code changes into dev
  environment, testing of API endpoints.

--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "build": "tsc",
     "watch": "tsc -w"
   },
