--- a/containers/Dockerfile.api
+++ b/containers/Dockerfile.api
@@ -1,18 +1,14 @@
 FROM node:20
 
-# Set working dir to root of monorepo
-WORKDIR /app
-
-# Copy entire monorepo into container
-COPY . .
-
-# Install dependencies
-RUN npm install
-# Set working dir to the API package
+# Set working directory
 WORKDIR /app/packages/api
 
+# Install dependencies
+COPY package*.json ../../
+COPY ../.. /app
+
 # Expose the API port
-EXPOSE 3001
+EXPOSE 3001 9229
 
 # Start the dev server
 CMD ["npm", "run", "dev"]
