--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "build": "tsc",
     "watch": "tsc -w"
   },
